- Added a add post image icon button which later will link to the new page for that specific secondary subject. - CSS changes which were needed for contentView - Fixed collapse not being rotated anymore.

--- a/CSS/content.css
+++ b/CSS/content.css
@@ -28,26 +28,6 @@
 	border-spacing: 0px;
 }
 
-.collapseSubjectImg
-{
-	width: 1.5em;
-	height: 1.5em;
-	vertical-align: middle;
-	position:  relative;
-	right: 1px;
-	top: 0.6em;
-}
-
-.collapseSubjectButton 
-{
-	position: relative;
-	background-color: transparent;
-	width: 5%;
-	bottom: 0.1em;
-	float:  right;
-	height: 100%;
-}
-
 .subjectContainer a 
 {
 	text-decoration: none;
@@ -108,11 +88,6 @@
 {
 	text-decoration: none;
 	color: lightseagreen;
-}
-
-.postPreviewRow 
-{
-
 }
 
 .postPreviewTitle 
@@ -187,6 +162,34 @@
 {
 	line-height: initial;
 	color: #394263;
+}
+
+.SCHeaderRowDoubleButton 
+{
+	float: right;
+	width: 5%;
+}
+
+.SCHeaderRowSingleButton 
+{
+	float: right;
+}
+
+.SCHeaderRowButtonImg 
+{
+	width: 1.5em;
+	height: 1.5em;
+	vertical-align: middle;
+}
+
+.SCHeaderRowButton 
+{
+	position: relative;
+	background-color: transparent;
+	width: 2%;
+	bottom: 0.1em;
+	height: 100%;
+	margin: 0em 0.75em;
 }
 
 .postContainer table 
